<resources>
    <string name="app_name">畅聊</string>

    <!-- 转场动画属性名 -->
    <string name="transition_server_setting" translatable="false">transition_server_setting</string>

    <string name="prompt_sign_up">Sign Up</string>
    <string name="prompt_forgot_password">Forgot password?</string>
    <string name="prompt_password">password</string>
    <string name="prompt_username">username</string>
    <string name="prompt_server">server</string>
    <string name="prompt_set_server">Set Server</string>
    <string name="prompt_server_address">ServerAddress</string>
    <string name="prompt_server_name">ServerName</string>
    <string name="prompt_server_port">ServerPort</string>
    <string name="prompt_tab_chat">会话</string>
    <string name="prompt_tab_contact">通讯录</string>
    <string name="prompt_tab_found">发现</string>
    <string name="prompt_tab_me">我</string>
    <string name="prompt_tomorrow">昨天</string>
    <string name="prompt_inCoding">正在开发中</string>
    <string name="prompt_noMoreChat">没有更多的信息了</string>

    <string name="action_cancle">cancle</string>
    <string name="action_confirm">sure</string>
    <string name="action_qunchat">发起群聊</string>
    <string name="action_friendAdd">添加朋友</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_about">关于</string>
    <string name="action_send">发送</string>

    <string name="error_send">error_send</string>
</resources>
