<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical"
    tools:context="com.github.ggggxiaolong.xmpp.user.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryLight"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/top_round_corner"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_selector"
            android:drawableLeft="@drawable/peple"
            android:drawablePadding="5dp"
            android:hint="@string/prompt_username"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingLeft="5dp"
            android:text="tanxl"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/edit_selector"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="5dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingLeft="5dp"
            android:text="1234"
            android:textSize="16sp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#f7f7f7">

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="@string/prompt_forgot_password"
                android:textColor="#999"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="@drawable/round_corner_blue"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Login"
                android:textColor="@android:color/white"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/regist"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/login"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/prompt_sign_up"
                android:textColor="#999"
                android:textSize="14sp"/>

        </RelativeLayout>
    </LinearLayout>

    <com.github.ggggxiaolong.xmpp.customView.OwlView
        android:id="@+id/owl"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_above="@id/login_pane"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:id="@+id/fab"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:elevation="@dimen/z_fab"
        android:background="@drawable/fab"
        android:stateListAnimator="@animator/raise"
        android:src="@drawable/ic_setting"/>

</RelativeLayout>